fix: increase logo width for better visibility

--- a/projects/login/src/app/app.component.scss
+++ b/projects/login/src/app/app.component.scss
@@ -241,7 +241,7 @@ img {
 }
 
 .logo-container .logo {
-  width: 80px;
+  width: 115px;
   height: 80px;
   margin: 0 !important;
 }
